--- a/strings.conf
+++ b/strings.conf
@@ -510,7 +510,7 @@
 !victory 0x1b Vittoria¬per¬l'effetto¬di¬Angelo¬dei¬Dispetti¬Fantasmatrucco
 !victory 0x1c Vittoria¬per¬l'effetto¬di¬Assalto¬Spirale¬Fantasmatica
 !victory 0x1d Vittoria¬per¬l'effetto¬di¬F.A.¬Vincitori
-!victory 0x1e Vittoria¬per¬l'effetto¬di¬Flying¬Elephant
+!victory 0x1e Vittoria¬per¬l'effetto¬di¬Elefante¬Volante
 !victory 0x20 Vittoria¬Incontro¬per¬l'effetto¬di¬[%ls]
 !victory 0x30 Vittoria¬per¬l'effetto¬di¬Creator¬of¬Miracles
 !victory 0x51 Vittoria¬per¬l'effetto¬di¬Evil¬1
@@ -986,6 +986,8 @@
 !setname 0x218 Cynet
 !setname 0x219 Nephthys
 !setname 0x220 Salamangreat
+!setname 0x221 Dinowrestler
+!setname 0x222 Drago¬del¬Tuono
 #anime archetype
 !setname 0x2033 Blackwing¬Tamer
 !setname 0x5034 Advanced¬Crystal¬Beast
