--- a/strings.conf
+++ b/strings.conf
@@ -589,7 +589,6 @@
 !counter 0x47 Segnalino/i¬(Codice¬Limite)
 !counter 0x48 Segnalino/i¬(Link¬Turret)
 !counter 0x1049 Segnalino/i¬Patrol
-!counter 0x49 Segnalino/i¬Patrol
 #anime counters
 !counter 0x1090 Segnalino/i¬Maiden
 !counter 0x91 Segnalino/i¬Speed
@@ -988,6 +987,9 @@
 !setname 0x220 Salamangreat
 !setname 0x221 Dinowrestler
 !setname 0x222 Drago¬del¬Tuono
+!setname 0x223 Danger!
+!setname 0x224 Forbidden
+!setname 0x225 Orphegel
 #anime archetype
 !setname 0x2033 Blackwing¬Tamer
 !setname 0x5034 Advanced¬Crystal¬Beast
