--- a/strings.conf
+++ b/strings.conf
@@ -587,8 +587,9 @@
 !counter 0x1045 Segnalino/i¬Scaglia
 !counter 0x46 Segnalino/i¬(Gouki¬Deathmatch)
 !counter 0x47 Segnalino/i¬(Codice¬Limite)
-!counter 0x48 Segnalino/i¬(Link¬Turret)
+!counter 0x48 Segnalino/i¬(Torretta¬Link)
 !counter 0x1049 Segnalino/i¬Patrol
+!counter 0x50 Segnalino/i¬Athlete
 #anime counters
 !counter 0x1090 Segnalino/i¬Maiden
 !counter 0x91 Segnalino/i¬Speed
@@ -980,16 +981,18 @@
 !setname 0x114 Pelliccia¬Mercenaria
 !setname 0x115 Assaltatrice¬del¬Cielo
 !setname 0x1115 Assaltatrice¬del¬Cielo¬Asso
-!setname 0x116 Palladion
-!setname 0x117 Deviritual
-!setname 0x218 Cynet
+!setname 0x116 Crociatia
+!setname 0x117 Impcantesimo
+!setname 0x118 Cynet
+!setname 0x119 Salamangreat
+!setname 0x11a Dinowrestler
+!setname 0x11b Orphegel
+!setname 0x11c Drago¬del¬Tuono
+!setname 0x11d Forbidden
+!setname 0x11e Pericolo!
 !setname 0x219 Nephthys
-!setname 0x220 Salamangreat
-!setname 0x221 Dinowrestler
-!setname 0x222 Drago¬del¬Tuono
-!setname 0x223 Danger!
-!setname 0x224 Forbidden
-!setname 0x225 Orphegel
+!setname 0x226 Prankids
+!setname 0x227 Mayakashi
 #anime archetype
 !setname 0x2033 Blackwing¬Tamer
 !setname 0x5034 Advanced¬Crystal¬Beast
