--- a/strings.conf
+++ b/strings.conf
@@ -233,7 +233,7 @@
 !system 1137 Boss¬Duel
 !system 1138 Battle¬City
 !system 1139 Duelist¬Kingdom
-!system 1140 Rose¬Duel
+!system 1140 Dimension¬Duel
 !system 1141 Turbo¬Duel¬(SW)
 !system 1142 Turbo¬Duel¬(SW2)
 !system 1143 Double¬Deck¬Duel
@@ -273,7 +273,7 @@
 !system 1223 Entra
 !system 1224 Host
 !system 1225 Limitazione:
-!system 1226 Banned¬List:
+!system 1226 Lista¬Carte¬Probite/Limitate:
 !system 1227 Modalità¬Duello:
 !system 1228 Opzioni¬Addizionali
 !system 1229 Non¬controllare¬Deck
@@ -283,7 +283,7 @@
 !system 1233 Carte¬per¬pescata:
 !system 1234 Nome¬Host:
 !system 1235 Password:
-!system 1236 Usa¬le¬vecchie¬regole
+!system 1236 Regole
 !system 1237 Limite¬di¬tempo:
 !system 1240 OCG
 !system 1241 TCG
@@ -356,7 +356,6 @@
 !system 1336 Scala：
 !system 1337 Cancellare¬il¬deck? 
 !system 1338 Cancellazione¬riuscita
-!system 1339 Pulire¬il¬deck?
 !system 1340 Salva¬Replay:
 !system 1341 Salva
 !system 1342 Replay:
@@ -382,8 +381,9 @@
 !system 1390 Attendi...
 !system 1391 Attendi....
 !system 1392 Attendi.....
+!system 1393 Archetipo: 
 !system 1400 Impossibile¬connettersi¬all'host.
-!system 1401 Connessione¬è¬stata¬persa.
+!system 1401 La¬connessione¬è¬stata¬persa.
 !system 1402 Si¬è¬verificato¬un¬errore¬durante¬la¬trasmissione.
 !system 1403 Non¬è¬possibile¬unirsi¬all'host.
 !system 1404 Password¬non¬corretta.
@@ -396,7 +396,7 @@
 !system 1411 Versione¬non¬compatibile(%X.0%X.%X).
 !system 1500 Duello¬concluso.
 !system 1501 Replay¬concluso.
-!system 1502 Connessione¬è¬stata¬persa.
+!system 1502 La¬connessione¬è¬stata¬persa.
 !system 1510 La¬tua¬scelta:[%ls]
 !system 1511 Avversario¬dichiara:[%ls]
 !system 1512 Scelta¬avversario:[%d]
@@ -404,11 +404,11 @@
 !system 1601 Posiz.¬una¬carta
 !system 1602 Il¬controllo¬della¬carta¬è¬cambiato
 !system 1603 [%ls]Evoc.¬Normalmente...
-!system 1604 Evoc.¬Normale¬riuscita
+!system 1604 Evoc.¬Normale¬riuscita.
 !system 1605 [%ls]Evoc.¬Specialmente...
-!system 1606 Evoc.¬Speciale¬riuscita
+!system 1606 Evoc.¬Speciale¬riuscita.
 !system 1607 [%ls]Evoc.¬Scoperta...
-!system 1608 Evoc.¬Scoperta¬riuscita
+!system 1608 Evoc.¬Scoperta¬riuscita.
 !system 1609 [%ls]è¬attivata
 !system 1610 [%ls](%ls,%d)selezionato
 !system 1611 Hai¬pescato¬%d¬carta/e
@@ -511,7 +511,9 @@
 !victory 0x1c Vittoria¬per¬l'effetto¬di¬Assalto¬Spirale¬Fantasmatica
 !victory 0x1d Vittoria¬per¬l'effetto¬di¬F.A.¬Vincitori
 !victory 0x1e Vittoria¬per¬l'effetto¬di¬Elefante¬Volante
+!victory 0x1f Vittoria¬per¬l'effetto¬di¬Exodia,¬il¬Difensore¬Leggendario
 !victory 0x20 Vittoria¬Incontro¬per¬l'effetto¬di¬[%ls]
+!victory 0x21 Vittoria¬per¬l'effetto¬di¬True¬Exodia
 !victory 0x30 Vittoria¬per¬l'effetto¬di¬Creator¬of¬Miracles
 !victory 0x51 Vittoria¬per¬l'effetto¬di¬Evil¬1
 !victory 0x52 Vittoria¬per¬l'effetto¬di¬Number¬Ci1000:¬Numerronius¬Numerronia
@@ -585,43 +587,29 @@
 !counter 0x43 Segnalino/i¬Difetto
 !counter 0x44 Segnalino/i¬(Drago¬Muro¬Linkcintura)
 !counter 0x1045 Segnalino/i¬Scaglia
-!counter 0x46 Segnalino/i¬(Gouki¬Deathmatch)
+!counter 0x46 Segnalino/i¬(Incontro¬in¬Gabbia¬Gouki)
 !counter 0x47 Segnalino/i¬(Codice¬Limite)
 !counter 0x48 Segnalino/i¬(Torretta¬Link)
-!counter 0x1049 Segnalino/i¬Patrol
-!counter 0x50 Segnalino/i¬Athlete
-#anime counters
-!counter 0x1090 Segnalino/i¬Maiden
-!counter 0x91 Segnalino/i¬Speed
-!counter 0x92 Segnalino/i¬Plasma
-!counter 0x93 Segnalino/i¬Sacred¬Beast
-!counter 0x94 Segnalino/i¬Earthbound¬Immortal
-!counter 0x95 Segnalino/i¬Crest
-!counter 0x1096 Segnalino/i¬Protection
-!counter 0x1097 Segnalino/i¬Des
-!counter 0x1098 Segnalino/i¬Chain
-!counter 0x99 Segnalino/i¬Full¬Moon
-!counter 0x1100 Segnalino/i¬Aura
-!counter 0x1101 Segnalino/i¬Hallucination
-!counter 0x1102 Segnalino/i¬Gear
-!counter 0x103 Segnalino/i¬Medal
-!counter 0x1104 Segnalino/i¬Thorn
-!counter 0x1105 Segnalino/i¬Turn
-!counter 0x1106 Segnalino/i¬Shield
-!counter 0x107 Segnalino/i¬Gearspring
-!counter 0x1107 Segnalino/i¬Prey
-!counter 0x1108 Segnalino/i¬Vaccine
-!counter 0x1109 Segnalino/i¬Life¬Star
-!counter 0x1110 Segnalino/i¬Beacon
-!counter 0x1112 Segnalino/i¬Disturbance
-!counter 0x1113 Segnalino/i¬Charge
-!counter 0x1114 Segnalino/i¬Venemy
+!counter 0x1049 Segnalino/i¬Pattuglia
+!counter 0x4a Segnalino/i¬Atleta
+!counter 0x147 Segnalino/i¬Callibro
+!counter 0x148 Segnalino/i¬Evocazione
+!counter 0x1148 Segnalino/i¬Segnale
+!counter 0x1149 Segnalino/i¬Venemy
+!counter 0x14a Segnalino/i¬(Performapal¬Turntrooper)
+!counter 0x14b Segnalino/i¬(Vespabattaglia¬-¬Nido)
+!counter 0x14c Segnalino/i¬(Firewall¬Dragon¬Darkfluid)
+!counter 0x14d Segnalino/i¬(Seraphim¬Papillon)
+!counter 0x14e Segnalino/i¬(Cauldron¬of¬the¬Old Man)
+!counter 0x14f Segnalino/i¬(World¬Legacy's¬Continuation)
+!counter 0x200 Segnalino/i¬(Pendulum¬Anima)
+!counter 0x201 Segnalino/i¬Pugno¬di¬Fuoco
 #archetype
 !setname 0x1 Alleato¬della¬Giustizia
 !setname 0x2 Genex
 !setname 0x1002 R-Genex
 !setname 0x2002 Genex¬Alleato
-!setname 0x3 N/A
+!setname 0x3 Horus¬il¬Drago¬della¬Fiamma¬Oscura
 !setname 0x4 Amazoness
 !setname 0x5 Energia¬Arcana
 !setname 0x6 Mondo¬Oscuro
@@ -649,9 +637,9 @@
 !setname 0x13 Meklord
 !setname 0x3013 Imperatore¬Meklord
 !setname 0x6013 Esercito¬Meklord
-!setname 0x14 N/A
+!setname 0x14 Regina¬della¬Seduzione
 !setname 0x15 B.E.S.
-!setname 0x16 Roid
+!setname 0x16 roid
 !setname 0x1016 Vehicroid
 !setname 0x2016 Velociroid
 !setname 0x17 Synchro
@@ -662,7 +650,7 @@
 !setname 0x1a Dark¬Scorpion
 !setname 0x1b Bestia¬Fantasma
 !setname 0x101b Bestia¬Fantasma¬Meccanica
-!setname 0x1c N/A
+!setname 0x1c Messaggio¬dello¬Spirito
 !setname 0x1d Koa'ki¬Meiru
 !setname 0x1e Crisalide
 !setname 0x1f Neo-Spaziale
@@ -680,7 +668,7 @@
 !setname 0x2b Ninja
 !setname 0x102b Ninja¬Armatura
 !setname 0x2c Flamvell
-!setname 0x2d N/A
+!setname 0x2d Nitro
 !setname 0x2e Custode¬di¬Tombe
 !setname 0x2f Barriera¬di¬Ghiaccio
 !setname 0x30 Vylon
@@ -725,7 +713,7 @@
 !setname 0x4a Signore¬del¬Tempo
 !setname 0x4b Aesir
 !setname 0x4c Buco¬Trappola
-!setname 0x4d N/A
+!setname 0x4d Battaglia¬del¬Gladiatore¬Bestia
 !setname 0x4e Evol
 !setname 0x304e Evoltile
 !setname 0x504e Evolzar
@@ -759,13 +747,13 @@
 !setname 0x1066 Guerriero¬Sinfonico
 !setname 0x2066 Guerriero¬Magnetico
 !setname 0x67 Ferraglia
-!setname 0x68 Tin
+!setname 0x68 Latta
 !setname 0x69 Ieratico
 !setname 0x6a Farfallospia
 !setname 0x6b Buttafuori
 !setname 0x6c Raggiodiluce
 !setname 0x6d Djinn
-!setname 0x606d Djinn¬dei¬Rituali
+!setname 0x106d Djinn¬dei¬Rituali
 !setname 0x6e Profezia
 !setname 0x106e Libro¬di¬Magia
 !setname 0x6f Eroico
@@ -793,7 +781,7 @@
 !setname 0x7c Formazione¬di¬Fuoco
 !setname 0x7d Chimerica
 !setname 0x107d Fiamma¬Chimerica
-!setname 0x7e ZW
+!setname 0x7e ZW -
 !setname 0x7f Utopi/Utopic
 !setname 0x107f Utopia
 !setname 0x80 Polverello
@@ -869,7 +857,7 @@
 !setname 0x30b5 Domatore¬Avatar¬Bestia¬Spirito
 !setname 0x40b5 Bestia¬Spirito¬Ulti-
 !setname 0xb7 Entità
-!setname 0x10b7 Outer¬Entity
+!setname 0x10b7 Entità¬Esterna
 !setname 0x20b7 Entità¬Maggiore
 !setname 0x40b7 Entità¬Antica
 !setname 0xb9 Acceleratore¬Fiammata
@@ -881,6 +869,7 @@
 !setname 0xbf Ammaliatore/Ammaliatrice
 !setname 0xc0 Posseduto¬dal¬Famiglio
 !setname 0xc1 PSI-Struttura
+!setname 0x10c1 PSI-Strutturattrezzatura
 !setname 0xc2 Utensile
 !setname 0xc3 Imp¬Filo
 !setname 0xc4 Zefra
@@ -907,6 +896,7 @@
 !setname 0xd7 Combattente¬delle¬Lame
 !setname 0xd8 Dinofoschia
 !setname 0xd9 Shiranui
+!setname 0x10d9 Shiranui¬Spettralspada
 !setname 0xda Dracosovrano
 !setname 0xdb Cavalieri¬Fantasma
 !setname 0x10db I¬Cavalieri¬Fantasma
@@ -984,176 +974,33 @@
 !setname 0x116 Crociatia
 !setname 0x117 Impcantesimo
 !setname 0x118 Cynet
-!setname 0x119 Salamangreat
+!setname 0x119 Salamagna
 !setname 0x11a Dinowrestler
-!setname 0x11b Orphegel
-!setname 0x11c Drago¬del¬Tuono
-!setname 0x11d Forbidden
+!setname 0x11b Orcusestra
+!setname 0x11c Drago¬del/di¬Tuono
+!setname 0x11d Proibito
 !setname 0x11e Pericolo!
-!setname 0x219 Nephthys
-!setname 0x226 Prankids
-!setname 0x227 Mayakashi
-#anime archetype
-!setname 0x2033 Blackwing¬Tamer
-!setname 0x5034 Advanced¬Crystal¬Beast
-!setname 0x2048 Number¬S
-!setname 0x209b Melodious¬Songstress
-!setname 0x10e3 Cubic¬Seed
-!setname 0x40ec Abyss¬Costume
-!setname 0x500 Speed¬Spell
-!setname 0x501 Alchemy¬Beast
-!setname 0x503 Anti
-!setname 0x505 Astral
-!setname 0x506 Atlandis
-!setname 0x507 Attack
-!setname 0x508 Baby
-!setname 0x509 Barian
-!setname 0x1509 Barian's
-!setname 0x2509 Battleguard
-!setname 0x50a Battlewasp
-!setname 0x50b Beastborg
-!setname 0x50c Butterfly
-!setname 0x150c Phantom¬Butterfly
-!setname 0x50d Carrier
-!setname 0x50e Cat
-!setname 0x150e Cat¬Girl
-!setname 0x50f Cicada
-!setname 0x510 Clear
-!setname 0x511 Comics¬Hero
-!setname 0x512 Cookpal
-!setname 0x1512 Royal¬Cookpal
-!setname 0x513 Dart
-!setname 0x515 Dizzy
-!setname 0x516 Dog
-!setname 0x517 Doll
-!setname 0x1517 Doll¬Monster
-!setname 0x2517 Doll¬Part
-!setname 0x518 Doodle
-!setname 0x1518 Doodle¬Beast
-!setname 0x519 Dyson
-!setname 0x51a Earth
-!setname 0x151a Earthbound
-!setname 0x351a Earthbound¬Servant
-!setname 0x51b Elf
-!setname 0x151b Magic¬Elf
-!setname 0x51d Fairy
-!setname 0x51e Forbidden¬Beast
-!setname 0x51f Forest
-!setname 0x520 Fortune¬Fairy
-!setname 0x521 Fossil
-!setname 0x1512 Fossil¬Knight
-!setname 0x2512 Cenozoic
-!setname 0x3512 Cenozoic¬Fossil¬Knight
-!setname 0x4512 Mezozoic
-!setname 0x5512 Mezozoic¬Fossil¬Knight
-!setname 0x8512 Paleozoic
-!setname 0x9512 Paleozoic¬Fossil¬Knight
-!setname 0x522 Gorgonic
-!setname 0x523 Goyo
-!setname 0x524 Granel
-!setname 0x1524 Granel¬Attack
-!setname 0x2524 Granel¬Guard
-!setname 0x4524 Granel¬Top
-!setname 0x8524 Granel¬Carrier
-!setname 0x525 Guard
-!setname 0x526 Guts¬Master
-!setname 0x527 Hand
-!setname 0x528 Heart¬Monster
-!setname 0x529 Heavy¬Industry
-!setname 0x52a Inu
-!setname 0x52b Ivy
-!setname 0x52c Jester
-!setname 0x152c Jester¬Puppet
-!setname 0x52d Jutte
-!setname 0x52e Kabuki¬Stage
-!setname 0x52f King
-!setname 0x152f Champion
-!setname 0x530 Knight
-!setname 0x1530 Clock¬Knight
-!setname 0x531 Koala
-!setname 0x533 Landstar
-!setname 0x534 Magnet
-!setname 0x535 Mantis
-!setname 0x536 Mosquito
-!setname 0x537 Motor
-!setname 0x538 Neko
-!setname 0x1538 Stray¬Cat
-!setname 0x53a Numeron
-!setname 0x53b Numeronius
-!setname 0x53c Papillon
-!setname 0x53d Parasite
-!setname 0x53e Pixie
-!setname 0x53f Priestess
-!setname 0x540 Puppet
-!setname 0x541 Quiz
-!setname 0x1541 Quiz¬Panel
-!setname 0x542 Raccoon
-!setname 0x543 Red
-!setname 0x544 Rose
-!setname 0x545 Seal
-!setname 0x546 Shaman
-!setname 0x547 Shark
-!setname 0x548 Shining
-!setname 0x549 Skiel
-!setname 0x1549 Skiel¬Attack
-!setname 0x2549 Skiel¬Guard
-!setname 0x4549 Skiel¬Top
-!setname 0x8549 Skiel¬Carrier
-!setname 0x54a Sky
-!setname 0x154a Angel
-!setname 0x254a Celestial
-!setname 0x54b Slime
-!setname 0x54c Sphere
-!setname 0x54d Spice
-!setname 0x154d Spell¬Spice
-!setname 0x54e Spirit
-!setname 0x154e Spirit¬Crystal
-!setname 0x54f Starship
-!setname 0x550 Statue
-!setname 0x1550 Pendulumstatue
-!setname 0x551 Stone
-!setname 0x552 Strain
-!setname 0x555 Tachyon
-!setname 0x1555 Tachyon¬Dragon
-!setname 0x556 Thorn¬Prisoner
-!setname 0x557 Top
-!setname 0x55a V
-!setname 0x155a "V "/" V"
-!setname 0x55b Valkyrie
-!setname 0x55c Vigilante
-!setname 0x55d White
-!setname 0x155d White¬Knight
-!setname 0x55f Wicked¬Rune
-!setname 0x560 Wisel
-!setname 0x1560 Wisel¬Attack
-!setname 0x2560 Wisel¬Guard
-!setname 0x4560 Wisel¬Top
-!setname 0x8560 Wisel¬Carrier
-!setname 0x561 Yubel
-!setname 0x562 ∞
-!setname 0x563 Yomi
-!setname 0x564 Shogi/Line¬Monster
-!setname 0x565 Hunder
-!setname 0x566 Heraldic
-!setname 0x567 Hell
-!setname 0x568 C
-!setname 0x569 Eco¬Spell
-!setname 0x56a Junk¬Robot
-!setname 0x56b W
-!setname 0x56c X
-!setname 0x56d Y
-!setname 0x56e Z
-!setname 0x56f Dark¬Mummy
-!setname 0x570 Tentacluster
-!setname 0x571 Monarch¬(monster)
-!setname 0x572 Mirror¬Imagine
-!setname 0x573 Hellix
-!setname 0x574 Sunavalon
-!setname 0x575 Sunvine
-!setname 0x576 Starving¬Venemy
-!setname 0x600 Dark¬Tuner
-!setname 0x601 Dark¬Synchro
-!setname 0x316 Darkness
-
-#custom archetype
-
+!setname 0x11f Nephtys
+!setname 0x120 Ragazzi-Birichini
+!setname 0x121 Mayakashi
+!setname 0x122 Valkyria-
+!setname 0x123 Drago¬Rosa
+!setname 0x124 Angelo¬Macchina
+!setname 0x125 Sorridente
+!setname 0x126 Ladro¬del¬Tempo
+!setname 0x127 Infinicingoli
+!setname 0x128 Stregartigiana
+!setname 0x129 Malocchio
+!setname 0x12a Endymion
+!setname 0x12b Marincipessa
+!setname 0x12c Tenyi
+!setname 0x12d Simorgh
+!setname 0x12e Strega¬Indovina
+!setname 0x12f Vespabattaglia
+!setname 0x130 Hakai
+!setname 0x1130 Hakaishin
+!setname 0x131 Specchio¬dei¬Sogni
+!setname 0x132 Mathmech
+!setname 0x133 Dragonmaid
+!setname 0x134 Generaider
+!setname 0x234 @Ignister
