--- a/strings.conf
+++ b/strings.conf
@@ -121,6 +121,8 @@
 !system 569 Seleziona¬la¬Zona¬dove¬mettere¬[%ls]
 !system 570 Seleziona¬la¬Zona¬da¬rendere¬inutilizzabile
 !system 571 Seleziona¬la¬Zona¬per¬spostare¬la¬carta
+!system 573 Aaggiungi¬la¬carta¬alla¬mano
+!system 574 Manda¬la¬carta¬al¬Cimitero
 !system 1000 Deck
 !system 1001 Mano
 !system 1002 Zona¬C.¬Mostro
@@ -342,7 +344,7 @@
 !system 1321 Tipo:
 !system 1322 ATK:
 !system 1323 DEF:
-!system 1324 Lv/Rg/VP:
+!system 1324 Lv/Rg/VP/CL:
 !system 1325 Cerca:
 !system 1326 Effetto
 !system 1327 Cerca
@@ -353,7 +355,7 @@
 !system 1333 Risultati:
 !system 1334 Side¬Deck¬completato
 !system 1335 Salvato¬con¬successo
-!system 1336 Scala：
+!system 1336 Scala
 !system 1337 Cancellare¬il¬deck? 
 !system 1338 Cancellazione¬riuscita
 !system 1340 Salva¬Replay:
@@ -548,14 +550,13 @@
 !counter 0x17 Segnalino/i¬Noce
 !counter 0x18 Segnalino/i¬Fiore
 !counter 0x1019 Segnalino/i¬Nebbia
-!counter 0x20 Segnalino/i¬Pianta
 !counter 0x1a Segnalino/i¬Vendetta
 !counter 0x1b Segnalino/i¬Orologio
 !counter 0x1c Segnalino/i¬D
 !counter 0x1d Segnalino/i¬Rottame
 !counter 0x1e Segnalino/i¬Portale
 !counter 0x1f Segnalino/i¬(B.E.S.)
-!counter 0x20 Segnalino/i¬Nebbia
+!counter 0x20 Segnalino/i¬Pianta
 !counter 0x1021 Segnalino/i¬Guardia
 !counter 0x22 Segnalino/i¬Draconico
 !counter 0x23 Segnalino/i¬Oceano
@@ -566,11 +567,11 @@
 !counter 0x28 Segnalino/i¬(Catapultatore¬Oscuro)
 !counter 0x29 Segnalino/i¬(Lucertola¬Mongolfiera)
 !counter 0x102a Segnalino/i¬(Riflettore¬Magico)
+!counter 0x2b Segnalino/i¬Destino
 !counter 0x2c Segnalino/i¬Agli¬Ordini¬Capo!
 !counter 0x2d Segnalino/i¬(Calcio¬Infuocato)
 !counter 0x2e Segnalino/i¬Squalo
 !counter 0x2f Segnalino/i¬Zucca
-!counter 0x2b Segnalino/i¬Destino
 !counter 0x30 Segnalino/i¬Giocarsi¬Il¬Tutto¬Per¬Tutto
 !counter 0x31 Segnalino/i¬Sole¬Nascente
 !counter 0x32 Segnalino/i¬Palloncino
@@ -598,10 +599,10 @@
 !counter 0x1149 Segnalino/i¬Venemy
 !counter 0x14a Segnalino/i¬(Performapal¬Turntrooper)
 !counter 0x14b Segnalino/i¬(Vespabattaglia¬-¬Nido)
-!counter 0x14c Segnalino/i¬(Firewall¬Dragon¬Darkfluid)
-!counter 0x14d Segnalino/i¬(Seraphim¬Papillon)
-!counter 0x14e Segnalino/i¬(Cauldron¬of¬the¬Old Man)
-!counter 0x14f Segnalino/i¬(World¬Legacy's¬Continuation)
+!counter 0x14c Segnalino/i¬(Drago¬Firewall¬Oscuroflusso)
+!counter 0x14d Segnalino/i¬(Seraphim¬Farfallio)
+!counter 0x14e Segnalino/i¬(Calderone¬dell'Anziano)
+!counter 0x14f Segnalino/i¬(L'Eredità¬del¬Mondo)
 !counter 0x200 Segnalino/i¬(Pendulum¬Anima)
 !counter 0x201 Segnalino/i¬Pugno¬di¬Fuoco
 #archetype
@@ -784,6 +785,7 @@
 !setname 0x7e ZW -
 !setname 0x7f Utopi/Utopic
 !setname 0x107f Utopia
+!setname 0x207f Futuro¬Utopico
 !setname 0x80 Polverello
 !setname 0x81 Re¬del¬Fuoco
 !setname 0x1081 Re¬del¬Fuoco¬Avatar
@@ -984,7 +986,8 @@
 !setname 0x120 Ragazzi-Birichini
 !setname 0x121 Mayakashi
 !setname 0x122 Valkyria-
-!setname 0x123 Drago¬Rosa
+!setname 0x123 Rosa
+!setname 0x1123 Drago¬Rosa
 !setname 0x124 Angelo¬Macchina
 !setname 0x125 Sorridente
 !setname 0x126 Ladro¬del¬Tempo
@@ -997,10 +1000,16 @@
 !setname 0x12d Simorgh
 !setname 0x12e Strega¬Indovina
 !setname 0x12f Vespabattaglia
-!setname 0x130 Hakai
-!setname 0x1130 Hakaishin
+!setname 0x130 Svincolato
+!setname 0x1130 Anima¬Svincolata
 !setname 0x131 Specchio¬dei¬Sogni
-!setname 0x132 Mathmech
-!setname 0x133 Dragonmaid
+!setname 0x132 Matemech
+!setname 0x133 Dragonzella
 !setname 0x134 Generaider
-!setname 0x234 @Ignister
+!setname 0x135 @Ignister
+!setname 0x136 A.I.
+!setname 0x137 Senka
+!setname 0x138 Megalith
+!setname 0x139 Onomato
+!setname 0x13a Oracolo¬di¬Palladio
+!setname 0x23a Ribellione
