--- a/strings.conf
+++ b/strings.conf
@@ -121,7 +121,7 @@
 !system 569 Seleziona¬la¬Zona¬dove¬mettere¬[%ls]
 !system 570 Seleziona¬la¬Zona¬da¬rendere¬inutilizzabile
 !system 571 Seleziona¬la¬Zona¬per¬spostare¬la¬carta
-!system 573 Aaggiungi¬la¬carta¬alla¬mano
+!system 573 Aggiungi¬la¬carta¬alla¬mano
 !system 574 Manda¬la¬carta¬al¬Cimitero
 !system 1000 Deck
 !system 1001 Mano
@@ -175,7 +175,7 @@
 !system 1057 Rituale
 !system 1058 Mostri¬Trappola
 !system 1059 Spirit
-!system 1060 Union
+!system 1060 Unione
 !system 1061 Gemello
 !system 1062 Tuner
 !system 1063 Synchro
@@ -344,7 +344,7 @@
 !system 1321 Tipo:
 !system 1322 ATK:
 !system 1323 DEF:
-!system 1324 Lv/Rg/VP/CL:
+!system 1324 Lv/Rg/CL:
 !system 1325 Cerca:
 !system 1326 Effetto
 !system 1327 Cerca
@@ -355,7 +355,7 @@
 !system 1333 Risultati:
 !system 1334 Side¬Deck¬completato
 !system 1335 Salvato¬con¬successo
-!system 1336 Scala
+!system 1336 ◆VP:
 !system 1337 Cancellare¬il¬deck? 
 !system 1338 Cancellazione¬riuscita
 !system 1340 Salva¬Replay:
@@ -778,7 +778,7 @@
 !setname 0x207a Nobili¬Armi
 !setname 0x7b Galattico
 !setname 0x107b Occhi¬Galattici
-!setname 0x307b Tachionico¬Occhi¬Galattici
+!setname 0x307b Drago¬Tachionico¬Occhi¬Galattici
 !setname 0x7c Formazione¬di¬Fuoco
 !setname 0x7d Chimerica
 !setname 0x107d Fiamma¬Chimerica
@@ -1010,6 +1010,8 @@
 !setname 0x136 A.I.
 !setname 0x137 Senka
 !setname 0x138 Megalith
-!setname 0x139 Onomato
-!setname 0x13a Oracolo¬di¬Palladio
-!setname 0x23a Ribellione
+!setname 0x139 Onomat
+!setname 0x13a Palladio
+!setname 0x13b Ribellione
+!setname 0x23b Codebreaker
+!setname 0x23c Barbaros
