--- a/strings.conf
+++ b/strings.conf
@@ -1008,10 +1008,14 @@
 !setname 0x134 Generaider
 !setname 0x135 @Ignister
 !setname 0x136 A.I.
-!setname 0x137 Senka
-!setname 0x138 Megalith
+!setname 0x137 Antichi¬Guerrieri
+!setname 0x138 Megalito
 !setname 0x139 Onomat
 !setname 0x13a Palladio
 !setname 0x13b Ribellione
-!setname 0x23b Codebreaker
-!setname 0x23c Barbaros
+!setname 0x13c Codebreaker
+!setname 0x13d Nemesis
+!setname 0x13e Barbaros
+!setname 0x23e Adamatia
+!setname 0x23f ConTrollo¬Bottino
+!setname 0x240 Fantasma¬del¬Chaos
